Add hook for juxtapose asset creation / update

--- a/mediathread/templates/projects/sequence_assignment_view.html
+++ b/mediathread/templates/projects/sequence_assignment_view.html
@@ -112,7 +112,9 @@
             <p>{{assignment.body|safe}}</p>
         </div>
         <div class="col-md-6">
-            <div id="jux-container"></div>
+            {% if my_response %}
+                <div id="jux-container"></div>
+            {% endif %}
         </div>
         <div class="col-md-3">
             {% if is_faculty %}
