add CollectionWidget code to sequence assignment view

--- a/mediathread/templates/projects/sequence_assignment_view.html
+++ b/mediathread/templates/projects/sequence_assignment_view.html
@@ -28,6 +28,8 @@
     <!--All the annotation javascript -->
     {% include "djangosherd/annotator_resources.html" %}
 
+    <script src="{{STATIC_URL}}js/app/assetmgr/collectionwidget.js"></script>
+
     <script src="{{STATIC_URL}}jquery/js/jquery-ui-timepicker-addon.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/app/projects/assignment_view.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/app/projects/juxtaposition_assignment_view.js" type="text/javascript"></script>
