add maxlength="140" to textareas

--- a/mediathread/templates/projects/sequence_assignment_edit.html
+++ b/mediathread/templates/projects/sequence_assignment_edit.html
@@ -122,7 +122,7 @@
                                 <li>@todo</li>
                                 <li>140 character limit</li>
                             </ul>
-                            <textarea name="custom_instructions_1" class="form-control mceEditor">{{form.instance.custom_instructions_2}}</textarea>
+                            <textarea name="custom_instructions_1" class="form-control mceEditor" maxlength="140">{{form.instance.custom_instructions_2}}</textarea>
                         </div>
                         <div class="form-group">
                             <label>Secondary Media Instructions</label>
@@ -131,7 +131,7 @@
                                 <li>@todo</li>
                                 <li>140 character limit</li>
                             </ul>
-                            <textarea name="custom_instructions_2" class="form-control mceEditor">{{form.instance.custom_instructions_2}}</textarea>
+                            <textarea name="custom_instructions_2" class="form-control mceEditor" maxlength="140">{{form.instance.custom_instructions_2}}</textarea>
                         </div>
                         <nav>
                             <ul class="pager">
