--- a/mediathread/templates/projects/sequence_assignment_view.html
+++ b/mediathread/templates/projects/sequence_assignment_view.html
@@ -40,7 +40,7 @@
     <script type="text/javascript" src="{{STATIC_URL}}js/select2/select2.min.js"></script>
     <script type="text/javascript" src="{{STATIC_URL}}jquery/js/masonry.pkgd.min.js"></script>
 
-    <script type="text/javascript">
+    <script>
         var view = new JuxtapositionAssignmentView({
             el: jQuery('.sequence-assignment').first(),
             viewer: '{{request.user.username}}',
