--- a/mediathread/templates/projects/sequence_assignment_view.html
+++ b/mediathread/templates/projects/sequence_assignment_view.html
@@ -46,9 +46,9 @@
             viewer: '{{request.user.username}}',
             isFaculty: {% if is_faculty %}true{% else %}false{% endif %},
             assignmentId: '{{assignment.id}}',
-            responseId: '{{my_response.id}}',
+            responseId: '{{the_response.id}}',
             vocabulary: JSON.parse('{{vocabulary|escapejs}}'),
-            submitted: {% if my_response and my_response.is_submitted %}true{% else %}false{% endif %},
+            submitted: {% if the_response and the_response.is_submitted %}true{% else %}false{% endif %},
             feedback: JSON.parse('{{feedback|escapejs}}'),
             feedbackCount: {{feedback_count}}
         });
@@ -60,7 +60,7 @@
 {% block content %}
 
 <div class="sequence-assignment">
-    <div style="width: 970px; background-color: red; height: 2px; display: none"></div>
+    <div style="width: 970px; background-color: red; height: 2px;"></div>
     <h2>
         Sequence Assignment <span class="project-view-title">{{assignment.title}}</span>
     </h2>
@@ -137,6 +137,7 @@
     <div class="spacer"></div>
 
     {% if the_response %}
+        {% with the_feedback=the_response.feedback_discussion %}
         <div class="assignment-response">
             {% if response_can_edit and not the_response.is_submitted %}
                 <div class="right">
@@ -175,10 +176,9 @@
                     <div class="clearfix"></div>
                     <div class="spacer"></div>
                 {% endif %}
-
                 <ul class="nav nav-tabs navbar-right" role="tablist">
                     <li role="presentation" class="active editor">
-                        <a href="#sequence-editor" aria-controls="sequence-editor" role="tab" data-toggle="tab">
+                        <a href="#sequence" aria-controls="sequence-editor" role="tab" data-toggle="tab">
                             {% if not the_response.is_submitted and response_can_edit %}
                                 Edit
                             {% endif %} Sequence
@@ -198,32 +198,90 @@
                             <a href="#" class="btn btn-primary btn-tab btn-show-submit">Submit</a>
                         </li>
                     {% endif %}
-                    {% if is_faculty and the_response.is_submitted %}
+                    
+                    {% if is_faculty or response_can_edit and the_feedback %}
                         <li role="presentation">
                             <a href="#feedback" aria-controls="feedback" role="tab" data-toggle="tab">
-                                {% if not feedback %}Add {% else %}Edit {% endif %}Feedback
+                                {% if is_faculty %}
+                                    {% if not the_feedback %}Add {% else %}Edit {% endif %}
+                                {% endif %}Feedback
                             </a>
                         </li>
+                    {% endif %}
+                    {% if is_faculty %}
                         <li role="presentation">
-                            <a href="#" class="btn btn-primary btn-tab btn-unsubmit">Unsubmit</a>
+                            <a href="#" class="btn btn-warning btn-tab btn-unsubmit">Unsubmit</a>
                         </li>
+                    {% endif %}
+                    {% if is_faculty or response.is_submitted and response_can_edit %}
                     {% endif %}
                 </ul>
             </div>
             <div class="clearfix"></div>
             <!-- Tab panes -->
             <div class="tab-content">
-                <div role="tabpanel" class="tab-pane active" id="sequence-editor">
+                <div role="tabpanel" class="tab-pane fade in active" id="sequence">
                     <div id="jux-container"></div>
                 </div>
-                <div role="tabpanel" class="tab-pane" id="reflection">
-                    <textarea></textarea>
+                <div role="tabpanel" class="tab-pane fade" id="reflection">
+                    <h4>Reflection</h4>
+                    {% if not the_response.is_submitted and response_can_edit %}
+                        <textarea>
+                        </textarea>
+                    {% else %}
+                        {{the_response.body|safe}}
+                    {% endif %}
                 </div>
-                <div role="tabpanel" class="tab-pane" id="feedback">
-                    <textarea></textarea>
-                </div>
+
+                {% if is_faculty or response_can_edit and the_feedback %}
+                    <div role="tabpanel" class="tab-pane fade" id="feedback">
+                        {% if is_faculty %}
+                            <form method="post" data-username="{{the_response.author.username}}"
+                                {% if the_feedback %}
+                                    action="/discussion/comment/{{the_feedback.id}}/">
+                                {% else %}
+                                    action="/discussion/create/">
+                                {% endif %}
+
+                                <div class="left"><b>{% public_name for the_feedback.user %}</b></div>
+                                <div class="right"><b>{{the_feedback.submit_date|date:"m/d/Y h:i a"}}</b></div>
+                                <div class="clearfix"></div>
+                                <div class="spacer"></div>
+                                <textarea name="comment" class="form-control"
+                                    placeholder="Offer feedback on this student's work">{{the_feedback.comment}}</textarea>
+
+                                {% if not the_feedback %}
+                                    <input type="hidden" name="comment_html" value="{{the_response.title}} feedback" />
+                                    <input type="hidden" name="publish" value="PrivateStudentAndFaculty" />
+                                    <input type="hidden" name="inherit" value="true" />
+                                    <input type="hidden" name="app_label" value="projects" />
+                                    <input type="hidden" name="model" value="project" />
+                                    <input type="hidden" name="obj_pk" value="{{the_response.id}}" />
+                                    <input type="hidden" name="publish" value="PrivateStudentAndFaculty" />
+                                {% endif %}
+                                <div class="spacer"></div>
+
+                                <div class="right">
+                                    <span class="alert alert-success" role="alert" style="display: none">
+                                        Your feedback was saved
+                                    </span>
+                                    <button class="btn btn-primary btn-sm save-feedback">
+                                        Save Feedback
+                                    </button>
+                                </div>
+                            </form>
+                            <div class="clearfix"></div>
+                        {% else %}
+                            <div class="left"><b>{% public_name for the_feedback.user %}</b></div>
+                            <div class="right"><b>{{the_feedback.submit_date|date:"m/d/Y h:i a"}}</b></div>
+                            <div class="clearfix"></div>
+                            <p>{{the_feedback.comment|safe}}</p>
+                        {% endif %}
+                    </div>
+                {% endif %}
             </div>
         </div>
+        {% endwith %}
     {% endif %}
 </div>
 
