correct tab ids

--- a/mediathread/templates/projects/sequence_assignment_view.html
+++ b/mediathread/templates/projects/sequence_assignment_view.html
@@ -213,7 +213,7 @@
             <div class="clearfix"></div>
             <!-- Tab panes -->
             <div class="tab-content">
-                <div role="tabpanel" class="tab-pane active" id="selection-editor">
+                <div role="tabpanel" class="tab-pane active" id="sequence-editor">
                     <div id="jux-container"></div>
                 </div>
                 <div role="tabpanel" class="tab-pane" id="reflection">
