--- a/mediathread/templates/projects/sequence_assignment_view.html
+++ b/mediathread/templates/projects/sequence_assignment_view.html
@@ -244,14 +244,12 @@
                                     action="/discussion/create/">
                                 {% endif %}
 
-                                <div class="left"><b>{% public_name for the_feedback.user %}</b></div>
-                                <div class="right"><b>{{the_feedback.submit_date|date:"m/d/Y h:i a"}}</b></div>
-                                <div class="clearfix"></div>
-                                <div class="spacer"></div>
-                                <textarea name="comment" class="form-control"
-                                    placeholder="Offer feedback on this student's work">{{the_feedback.comment}}</textarea>
-
-                                {% if not the_feedback %}
+                                {% if the_feedback %}
+                                    <div class="left"><b>{% public_name for the_feedback.user %}</b></div>
+                                    <div class="right"><b>{{the_feedback.submit_date|date:"m/d/Y h:i a"}}</b></div>
+                                    <div class="clearfix"></div>
+                                    <div class="spacer"></div>
+                                {% else %}
                                     <input type="hidden" name="comment_html" value="{{the_response.title}} feedback" />
                                     <input type="hidden" name="publish" value="PrivateStudentAndFaculty" />
                                     <input type="hidden" name="inherit" value="true" />
@@ -260,6 +258,10 @@
                                     <input type="hidden" name="obj_pk" value="{{the_response.id}}" />
                                     <input type="hidden" name="publish" value="PrivateStudentAndFaculty" />
                                 {% endif %}
+
+                                <textarea name="comment" class="form-control"
+                                    placeholder="Offer feedback on this student's work">{{the_feedback.comment}}</textarea>
+
                                 <div class="spacer"></div>
 
                                 <div class="right">
