SequenceAssignmentView: add label to indicate 0 responses

--- a/mediathread/templates/projects/sequence_assignment_responses.html
+++ b/mediathread/templates/projects/sequence_assignment_responses.html
@@ -51,6 +51,10 @@
                 </div>
             </div>
         </div>
+    {% else %}
+        <div class="right">
+            <h2><span class="label label-primary">No responses yet</h2>
+        </div>
     {% endif %}
 {% endif %}
 
