--- a/mediathread/templates/projects/sequence_assignment_responses.html
+++ b/mediathread/templates/projects/sequence_assignment_responses.html
@@ -2,50 +2,48 @@
 
 {% if is_faculty or the_response and the_response.is_submitted %}
     {% if responses|length > 0 %}
-        <div class="right">
-            <button class="btn btn-primary btn-sm right" type="button" data-toggle="modal" data-target="#response-list">
-                Responses &nbsp;<span class="badge">{{responses|length}}</span>
-            </button>
-            <div class="modal fade" id="response-list" tabindex="-1"
-                role="dialog" aria-labelledby="Responses">
-                <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="close"
-                                data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                            <h4 class="modal-title">Responses</h4>
-                        </div>
-                        <div class="modal-body">
-                            <div class="table-responsive">
-                                <table class="table table-striped">
-                                    <tr>
-                                        <th>Author</th>
-                                        <th>Submitted</th>
-                                        {% if is_faculty %}<th>Feedback Given</th>{% endif %}
-                                    </tr>
-                                    {% for response in responses %}
-                                    <tr>
+        <button class="btn btn-primary btn-sm right" type="button" data-toggle="modal" data-target="#response-list">
+            Responses &nbsp;<span class="badge">{{responses|length}}</span>
+        </button>
+        <div class="modal fade" id="response-list" tabindex="-1"
+            role="dialog" aria-labelledby="Responses">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close"
+                            data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                        <h4 class="modal-title">Responses</h4>
+                    </div>
+                    <div class="modal-body">
+                        <div class="table-responsive">
+                            <table class="table table-striped">
+                                <tr>
+                                    <th>Author</th>
+                                    <th>Submitted</th>
+                                    {% if is_faculty %}<th>Feedback Given</th>{% endif %}
+                                </tr>
+                                {% for response in responses %}
+                                <tr>
+                                    <td>
+                                        <a href="{% url 'project-workspace' response.id %}">
+                                            {% public_name for response.author %}
+                                        </a>
+                                    </td>
+                                    <td>
+                                        {{response.date_submitted|date:'m/d/Y h:i a'}}
+                                    </td>
+                                    {% if is_faculty %}
                                         <td>
-                                            <a href="{% url 'project-workspace' response.id %}">
-                                                {% public_name for response.author %}
-                                            </a>
+                                            <span data-id="feedback-date-{{the_response.id}}">
+                                                {{response.feedback_date|date:'m/d/Y h:i a'}}
+                                            </span>
                                         </td>
-                                        <td>
-                                            {{response.date_submitted|date:'m/d/Y h:i a'}}
-                                        </td>
-                                        {% if is_faculty %}
-                                            <td>
-                                                <span data-id="feedback-date-{{the_response.id}}">
-                                                    {{response.feedback_date|date:'m/d/Y h:i a'}}
-                                                </span>
-                                            </td>
-                                        {% endif %}
-                                    </tr>
-                                    {% endfor %}
-                                </table>
-                            </div>
+                                    {% endif %}
+                                </tr>
+                                {% endfor %}
+                            </table>
                         </div>
                     </div>
                 </div>
@@ -58,6 +56,7 @@
     {% endif %}
 {% endif %}
 
+{% comment %} Submit & Unsubmit Modals {% endcomment %}
 {% if the_response and response_can_edit and not the_response.is_submitted %}
     <div class="modal fade" id="cannot-submit-project" tabindex="-1"
         role="dialog" aria-labelledby="Cannot Submit Response">
@@ -110,5 +109,55 @@
           </div>
         </div>
       </div>
+    </div>
+{% endif %}
+
+{% if the_response and response_can_edit and the_response.is_submitted %}
+    <div class="modal fade" id="visibility-list" tabindex="-1"
+        role="dialog" aria-labelledby="Share">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close"
+                        data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                    <h4 class="modal-title">Share with Others</h4>
+                </div>
+                <div class="modal-body">
+                    <div>
+                        Your response visibility is set as <b>{{the_response.visibility_short}}</b>.<br /><br />
+                        {% if public_url %}
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    Use this permalink to share your response
+                                </div>
+                                <div class="panel-body">
+                                    <a class="small" href="{{public_url}}">https://{{request.get_host}}{{public_url}}</a>
+                                </div>
+                            </div>
+                        {% endif %}
+                    </div><br>
+
+                    <label>Change who can see your response</label>
+                    <form action="{% url 'project-visibility' the_response.id %}" method="post">
+                        <div class="radio">
+                            <label>
+                                <input {% if not public_url %}checked="checked"{% endif %} name="publish" type="radio" value="CourseProtected"> Whole Class - all class members can view
+                            </label>
+                        </div>
+                        <div class="radio">
+                            <label>
+                                <input {% if public_url %}checked="checked"{% endif %} name="publish" type="radio" value="PublicEditorsAreOwners"> Whole World - a public url is provided</label>
+                        </div>
+
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                            <button type="submit" class="btn btn-primary btn-save-visibility">Save</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
 {% endif %}
