--- a/mediathread/templates/projects/sequence_assignment_view.html
+++ b/mediathread/templates/projects/sequence_assignment_view.html
@@ -60,6 +60,8 @@
 {% endblock %}
 
 {% block content %}
+{% with public_url=the_response.public_url %}
+{% with the_feedback=the_response.feedback_discussion %}
 
 <div class="sequence-assignment">
     <div style="width: 970px; background-color: red; height: 2px; display: none"></div>
@@ -139,7 +141,6 @@
     <div class="spacer"></div>
 
     {% if the_response %}
-        {% with the_feedback=the_response.feedback_discussion %}
         <div class="assignment-response">
             {% if response_can_edit and not the_response.is_submitted %}
                 <div class="right">
@@ -172,8 +173,15 @@
                     <div class="right">
                         <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
                         <strong>
-                            Submitted |
+                            Submitted
                         </strong> {{the_response.modified|date:"m/d/Y h:i a"}}
+
+                        {% if response_can_edit %}
+                            <a class="btn btn-primary btn-sm" href="#" data-toggle="modal" data-target="#visibility-list">
+                                <span class="glyphicon glyphicon-link" aria-hidden="true"></span>
+                                {% if public_url %}Permalink{% else %}Share{% endif %}
+                            </a>
+                        {% endif %}
                     </div>
                     <div class="clearfix"></div>
                     <div class="spacer"></div>
@@ -286,8 +294,7 @@
                 {% endif %}
             </div>
         </div>
-        {% endwith %}
     {% endif %}
 </div>
-
+{% endwith %}{% endwith %}
 {% endblock %}
