--- a/mediathread/templates/projects/sequence_assignment_view.html
+++ b/mediathread/templates/projects/sequence_assignment_view.html
@@ -151,7 +151,7 @@
                 <div class="clearfix"></div>
                 <div class="spacer"></div>
             {% endif %}
-            <div class="left col-half">
+            <div class="left title-container">
                 {% if the_response.is_submitted %}
                     <div class="assignment-response-title">{{the_response.title}}</div>
                     <div class="assignment-response-author">
@@ -167,7 +167,7 @@
                     </div>
                 {% endif %}{% endif %}
             </div>
-            <div class="right col-half">
+            <div class="right tabs-container">
                 {% if the_response.is_submitted %}
                     <div class="right">
                         <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
