* disable Save button once all material is saved

--- a/mediathread/templates/projects/sequence_assignment_view.html
+++ b/mediathread/templates/projects/sequence_assignment_view.html
@@ -212,7 +212,7 @@
                     {% endif %}
                     {% if not the_response.is_submitted and response_can_edit %}
                         <li role="presentation">
-                            <a href="#" class="btn btn-primary btn-tab btn-save">Saved</a>
+                            <a href="#" class="btn btn-primary btn-tab btn-save disabled">Saved</a>
                         </li>
                         <li role="presentation">
                             <a href="#" class="btn btn-primary btn-tab btn-show-submit">Submit</a>
