Sequence Assignment: can't submit text

--- a/mediathread/templates/projects/sequence_assignment_responses.html
+++ b/mediathread/templates/projects/sequence_assignment_responses.html
@@ -67,7 +67,7 @@
             <h4 class="modal-title">Submit Response</h4>
           </div>
           <div class="modal-body">
-            <div>TBD</div><br />
+            <div>A primary video and at least one secondary media item are required to submit your response.</div><br />
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
